Add JWT-based authentication and user management
Introduces JWT authentication with access and refresh tokens, user registration and login endpoints, and related exception handling. Adds User and RefreshToken entities, repositories, DTOs, and service classes for authentication. Updates Product entity with createdAt timestamp.